--- a/Learning_Programming/B7Web - Projetinhos/exercitando/starbucks_project/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/starbucks_project/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
 
     <title>Starbucks</title>
 </head>
@@ -83,7 +84,7 @@
         </section>
 
         <section class="area3">
-            <div class="area3--content">
+            <div class="area3-content">
                 <h2>Chegou o novo <br> Frappuccino Ultra Caramelo!</h2>
 
                 <div class="area3-text">
@@ -98,7 +99,34 @@
             <div class="area3-img1"></div>
         </section>
 
+        <section class="area4">
+            <div class="area4-content">
+                <div class="bar"></div>
+                <h2>A bondade começa <br> Com uma xícara</h2>
+
+                <div class="area4-text">
+                    <p>Apresentamos a coleção Cups of Kindness: quatro drinks muito especiais, tão deliciosos e refrescantes quanto lindos. Duas novas criações, Matcha Lemonade e Violet Drink, juntar-se-ão ao Pink Drink e ao Ombré Pink Drink como favoritos instantâneos do verão.</p>
+                </div>
+
+                <a href="" class="button">leia mais...</a>
+            </div>
+
+            <div class="area4-img1"></div>
+        </section>
+
+        <section class="area5"></section>
+
     </main>
+
+    <footer>
+        <div class="footer">
+            Criado com <span>♥</span> por Guilherme.Dsgn.
+        </div>
+        <hr>
+        <div class="footer">
+            Créditos do Layout: <a href="https://starbucks.nicepage.io" target="_blank">NicePage</a>.
+        </div>
+    </footer>
     
 </body>
 </html>
