Correções e Adição de um ReadME Bonitinho

--- a/Learning_Programming/B7Web - Projetinhos/exercitando/flexcenter/center.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/flexcenter/center.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>FlexCenter</title>
-    <link rel="stylesheet" href="recursos/css/estilo.css">
-    <link rel="stylesheet" href="recursos/css/global.css">
-    <link rel="shortcut icon" href="recursos/imgs/favicon.ico">
+    <link rel="stylesheet" href="./recursos/css/estilo.css">
+    <link rel="stylesheet" href="./recursos/css/global.css">
+    <link rel="shortcut icon" href="./recursos/imgs/favicon.ico">
 
     <script type="text/javascript">
 
@@ -29,7 +29,7 @@
     <header>
         <div class="interface">
             <div class="menu-logo">
-                <a href=""><img src="recursos/imgs/flexcenter-logo-text.png" alt=""></a>
+                <a href=""><img src="./recursos/imgs/flexcenter-logo-text.png" alt=""></a>
             </div>
 
             <div class="menu-nav">
@@ -109,7 +109,7 @@
                                 </div>
 
                                 <div class="news-thumb">
-                                    <img src="/recursos/imgs/img-posts.png" alt="">
+                                    <img src="./recursos/imgs/img-posts.png" alt="">
                                 </div>
 
                                 <div class="news-titulo">
@@ -130,7 +130,7 @@
                                 </div>
 
                                 <div class="news-thumb">
-                                    <img src="/recursos/imgs/img-posts.png" alt="">
+                                    <img src="./recursos/imgs/img-posts.png" alt="">
                                 </div>
 
                                 <div class="news-titulo">
@@ -151,7 +151,7 @@
                                 </div>
 
                                 <div class="news-thumb">
-                                    <img src="/recursos/imgs/img-posts.png" alt="">
+                                    <img src="./recursos/imgs/img-posts.png" alt="">
                                 </div>
 
                                 <div class="news-titulo">
@@ -172,7 +172,7 @@
                                 </div>
 
                                 <div class="news-thumb">
-                                    <img src="/recursos/imgs/img-posts.png" alt="">
+                                    <img src="./recursos/imgs/img-posts.png" alt="">
                                 </div>
 
                                 <div class="news-titulo">
@@ -198,16 +198,16 @@
 
                     <div class="body-widget">
                         <div class="dep-quadr-widget">
-                            <div class="quadr-widget qd-fl-1"><img src="/recursos/imgs/responsive-icon.png" alt="Ícone"> Responsividade</div>
-                            <div class="quadr-widget qd-fl-2"><img src="/recursos/imgs/organizacao-icon.png" alt="Ícone"> Organização</div>
+                            <div class="quadr-widget qd-fl-1"><img src="./recursos/imgs/responsive-icon.png" alt="Ícone"> Responsividade</div>
+                            <div class="quadr-widget qd-fl-2"><img src="./recursos/imgs/organizacao-icon.png" alt="Ícone"> Organização</div>
                         </div>
                         <div class="dep-quadr-widget">
-                            <div class="quadr-widget qd-fl-1"><img src="/recursos/imgs/alinhar-icon.png" alt="Ícone"> Alinhamento</div>
-                            <div class="quadr-widget qd-fl-2"><img src="/recursos/imgs/b7web-icon.png" alt="Ícone"> B7Web</div>
+                            <div class="quadr-widget qd-fl-1"><img src="./recursos/imgs/alinhar-icon.png" alt="Ícone"> Alinhamento</div>
+                            <div class="quadr-widget qd-fl-2"><img src="./recursos/imgs/b7web-icon.png" alt="Ícone"> B7Web</div>
                         </div>
                         <div class="dep-quadr-widget">
-                            <div class="quadr-widget qd-fl-1"><img src="/recursos/imgs/curso-icon.png" alt="Ícone"> Aprendizado</div>
-                            <div class="quadr-widget qd-fl-2"><img src="/recursos/imgs/medic-icon.png" alt="Ícone"> Cuidados</div>
+                            <div class="quadr-widget qd-fl-1"><img src="./recursos/imgs/curso-icon.png" alt="Ícone"> Aprendizado</div>
+                            <div class="quadr-widget qd-fl-2"><img src="./recursos/imgs/medic-icon.png" alt="Ícone"> Cuidados</div>
                         </div>
                     </div>
                 </div>
@@ -223,15 +223,15 @@
 
                             <div class="infos-m-consulta">
                                 <div class="info-m-cons-1">
-                                    <img src="/recursos/imgs/flexcenter-logo.png"> pelo telefone: +55 (51) 99999-9999
+                                    <img src="./recursos/imgs/flexcenter-logo.png"> pelo telefone: +55 (51) 99999-9999
                                 </div>
     
                                 <div class="info-m-cons-2">
-                                    <img src="/recursos/imgs/flexcenter-logo.png"> pelo e-mail: contato@flexcenter.com
+                                    <img src="./recursos/imgs/flexcenter-logo.png"> pelo e-mail: contato@flexcenter.com
                                 </div>
     
                                 <div class="info-m-cons-3">
-                                    <img src="/recursos/imgs/flexcenter-logo.png"> ou pelo centro de atendimento online
+                                    <img src="./recursos/imgs/flexcenter-logo.png"> ou pelo centro de atendimento online
                                 </div>
                         </div>
                     </div>
@@ -285,10 +285,10 @@
                             </div>
 
                             <div class="fa1-redes">
-                                <div class="rede-quadrado"> <img src="/recursos/imgs/facebook-logo.png"> </div>
-                                <div class="rede-quadrado"> <img src="/recursos/imgs/twitter-logo.png"> </div>
-                                <div class="rede-quadrado"> <img src="/recursos/imgs/instagram-logo.png"> </div>
-                                <div class="rede-quadrado"> <img src="/recursos/imgs/email-logo.png"> </div>
+                                <div class="rede-quadrado"> <img src="./recursos/imgs/facebook-logo.png"> </div>
+                                <div class="rede-quadrado"> <img src="./recursos/imgs/twitter-logo.png"> </div>
+                                <div class="rede-quadrado"> <img src="./recursos/imgs/instagram-logo.png"> </div>
+                                <div class="rede-quadrado"> <img src="./recursos/imgs/email-logo.png"> </div>
                             </div>
                         </div>
                     </div>
