--- a/Learning_Programming/B7Web - Projetinhos/exercitando/formpage/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/formpage/index.html
@@ -18,7 +18,7 @@
                 <div class="formulario">
                     <h1>Informações Pessoais</h1>
                     <div class="div-bar"></div>
-                    <form action="/index-submit.html" method="get">
+                    <form action="./index-submit.html" method="get">
                         <label for="nome">
                             <span>・Nome:</span>
                             <input type="text" name="nome" placeholder="Digite seu primeiro nome..." id="nome" required>
