--- a/Learning_Programming/B7Web - Projetinhos/exercitando/grugi-clone/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/grugi-clone/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
     <title>Gugri</title>
 </head>
@@ -26,10 +26,10 @@
                 </nav>
 
                 <div class="other-infos-nav">
-                    <a href="#"><img src="/assets/images/IconOpts.png" alt=""></a>
+                    <a href="#"><img src="./assets/images/IconOpts.png" alt=""></a>
 
                     <div class="img-infos-nav">
-                        <img src="/assets/images/ProfilePhoto.png" alt="">
+                        <img src="./assets/images/ProfilePhoto.png" alt="">
                     </div>
                 </div>
 
@@ -42,7 +42,7 @@
             <div class="principal-page">
 
                 <div class="logo-gugri">
-                    <img src="/assets/images/LogoEscrita.png" alt="Logo Gugri">
+                    <img src="./assets/images/LogoEscrita.png" alt="Logo Gugri">
                 </div>
 
                 <div class="barra-pesquisa">
