--- a/Learning_Programming/B7Web - Projetinhos/exercitando/landing-product-page/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/landing-product-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Product Page</title>
 </head>
@@ -14,7 +14,7 @@
         <div class="interface-cab">
 
             <div class="menu-logo">
-                <a href="#"> <img src="/assets/images/logo-mango-cell-v2.png" alt="Logo MangoEletronics"> <span>MangoEletronics</span> </a>
+                <a href="#"> <img src="./assets/images/logo-mango-cell-v2.png" alt="Logo MangoEletronics"> <span>MangoEletronics</span> </a>
             </div>
 
             <div class="menu-nav">
@@ -32,8 +32,8 @@
             </div>
 
             <div class="menu-options">
-                <a href=""><img src="/assets/images/lupa-icon.png" alt="Icone de Busca"></a>
-                <a href=""><img src="/assets/images/sacola-icon.png" alt="Icone de Sacola"></a>
+                <a href=""><img src="./assets/images/lupa-icon.png" alt="Icone de Busca"></a>
+                <a href=""><img src="./assets/images/sacola-icon.png" alt="Icone de Sacola"></a>
             </div>
 
         </div>
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="image-product">
-                    <img src="/assets/images/phone-1.png" alt="">
+                    <img src="./assets/images/phone-1.png" alt="">
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
 
             <div class="modelos-product">
                 <div class="img-models">
-                    <img src="/assets/images/phones-2.png" alt="">
+                    <img src="./assets/images/phones-2.png" alt="">
                 </div>
 
                 <div class="text-models">
