--- a/Learning_Programming/B7Web - Projetinhos/exercitando/sociallifeinvaderpage/index2.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/sociallifeinvaderpage/index2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
     <title>FaceInvader</title>
 </head>
@@ -16,7 +16,7 @@
         <div class="cab-interface">
 
             <div class="logo-menu">
-                <a href=""><img src="/assets/images/logo-escrita.png" alt="Logo FaceInvader Escrita"></a>
+                <a href=""><img src="./assets/images/logo-escrita.png" alt="Logo FaceInvader Escrita"></a>
             </div>
         </div>
     </header>
