--- a/Learning_Programming/B7Web - Projetinhos/exercitando/flexbox/flex.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/flexbox/flex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso B7Web - Flex Site</title>
-    <link rel="stylesheet" href="/recursos/css/style.css">
+    <link rel="stylesheet" href="./recursos/css/style.css">
     <link rel="shortcut icon" href="">
 </head>
 <body> <!--  -->
@@ -32,7 +32,7 @@
 
         <section class="pt-principal">
             <div>
-                <img class="img-principal-1" src="/recursos/imgs/img-1-p.jpg">
+                <img class="img-principal-1" src="./recursos/imgs/img-1-p.jpg">
             </div>
 
             <div>
@@ -46,7 +46,7 @@
         <section class="pt-secundaria">
             <div class="cont-s1">
                 
-                <div class="img-sec"> <img src="/recursos/imgs/img-2.jpg" alt=""> </div>
+                <div class="img-sec"> <img src="./recursos/imgs/img-2.jpg" alt=""> </div>
 
                 <div>
                     <h2>Cenas Selvagens</h2>
@@ -57,7 +57,7 @@
 
             <div class="cont-s2">
 
-                <div class="img-sec"> <img src="/recursos/imgs/img-3.jpg" alt=""> </div>
+                <div class="img-sec"> <img src="./recursos/imgs/img-3.jpg" alt=""> </div>
                 <div>
                     <h2>Paisagens Serenas</h2>
                     <p>Mergulhe em vistas de tirar o fôlego, desde praias tranquilas até picos de montanhas imponentes. Nesta seção, viaje virtualmente para destinos deslumbrantes e descubra a tranquilidade encontrada na vastidão da natureza.</p>
@@ -67,7 +67,7 @@
 
             <div class="cont-s3">
 
-                <div class="img-sec"> <img src="/recursos/imgs/img-4.jpg" alt=""> </div>
+                <div class="img-sec"> <img src="./recursos/imgs/img-4.jpg" alt=""> </div>
                 <div>
                     <h2>Detalhes Encantadores</h2>
                     <p>Às vezes, a beleza está nos detalhes. Explore esta seção para descobrir fotografias que destacam a delicadeza das texturas, cores e padrões encontrados na flora e fauna, oferecendo uma perspectiva íntima da natureza.</p>
@@ -81,7 +81,7 @@
     <footer>
         <div class="pt1-footer">
             <div class="logo-footer">
-                <img src="/recursos/imgs/logo-folha.png">
+                <img src="./recursos/imgs/logo-folha.png">
                 <p>Nature Photography</p>
             </div>
 
