--- a/Learning_Programming/B7Web - Projetinhos/exercitando/starbucks_project/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/starbucks_project/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
 
     <title>Starbucks</title>
 </head>
@@ -15,19 +15,19 @@
         <div class="h-line"></div>
         <div class="interface header--area">
             <div class="header--left">
-                <a href="/"><img src="assets/images/logo.png"></a>
+                <a href="/"><img src="./assets/images/logo.png"></a>
             </div>
             <div class="header--right">
                 <div class="header--serach">
                     <form>
                         <input type="text" name="search" placeholder="Pesquisar...">
                         <button>
-                            <img src="assets/images/loupe.png">
+                            <img src="./assets/images/loupe.png">
                         </button>
                     </form>
                 </div>
                 <div class="header--menu">
-                    <img src="assets/images/menu.png">
+                    <img src="./assets/images/menu.png">
                 </div>
             </div>
         </div>
@@ -40,9 +40,9 @@
                 <h1>Starbucks®️<br>Happy Hour</h1>
                 <span>Nos encontraremos com você em sua caixa de entrada. Ofertas de bebidas estão a caminho.</span>
                 <div class="banner--images">
-                    <img src="assets/images/c1.jpg">
-                    <img src="assets/images/c2.jpg">
-                    <img src="assets/images/c3.jpg">
+                    <img src="./assets/images/c1.jpg">
+                    <img src="./assets/images/c2.jpg">
+                    <img src="./assets/images/c3.jpg">
                 </div>
             </div>
         </section>
