--- a/Learning_Programming/B7Web - Projetinhos/javascript/projetos/aulaJS_009/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/javascript/projetos/aulaJS_009/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>Exercício de Funções <span>#1</span> & <span>#2</span></h1>
+    <h1>Array</h1>
     
     <script src="script.js"></script>
 </body>
