Novo Projeto NLW da Rocketseat

--- a/Learning_Programming/Rocketseat Projetos/001 - Player Musica/index.html
+++ b/Learning_Programming/Rocketseat Projetos/001 - Player Musica/index.html
@@ -15,7 +15,7 @@
 
         <div class="player" id="player-1">
             <div class="wrapper">
-                <img src="/images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
+                <img src="./images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
 
                 <div class="info">
                     <h1>Máquina do Tempo</h1>
@@ -74,7 +74,7 @@
         <div class="player horizontal" id="player-2">
             <div class="wrapper">
                 <div class="info-wrapper">
-                    <img src="/images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
+                    <img src="./images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
 
                 <div class="info">
                     <h1>Máquina do Tempo</h1>
@@ -134,7 +134,7 @@
         <div class="player horizontal" id="player-3">
             <div class="wrapper">
                 <div class="info-wrapper">
-                    <img src="/images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
+                    <img src="./images/tuezin_image.jpeg" alt="Imagem da Musíca Máquina do Tempo">
 
                 <div class="info">
                     <h1>Máquina do Tempo</h1>
