--- a/Learning_Programming/B7Web - Projetinhos/exercitando/burguer_page/index.html
+++ b/Learning_Programming/B7Web - Projetinhos/exercitando/burguer_page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/recursos/css/style.css">
+    <link rel="stylesheet" href="./recursos/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <title>GumeBurger</title>
@@ -15,7 +15,7 @@
         <div class="interface">
 
             <div class="logo">
-                <a href="#"><img src="/recursos/imagens/logoburguer.png" alt="Logo da GumeBurger"></a>
+                <a href="#"><img src="./recursos/imagens/logoburguer.png" alt="Logo da GumeBurger"></a>
             </div>
 
             <nav>
