--- a/Learning_Programming/Rocketseat Projetos/006 - Lista de Tarefas/index.html
+++ b/Learning_Programming/Rocketseat Projetos/006 - Lista de Tarefas/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/recursos/style.css">
+    <link rel="stylesheet" href="./recursos/style.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <script type="text/javascript" src="/recursos/script.js" defer></script>
+    <script type="text/javascript" src="./recursos/script.js" defer></script>
 
     <title>Lista de Tarefas do Gui</title>
 </head>
@@ -17,7 +17,7 @@
     <section id="app">
 
         <nav>
-            <div class="logo"><img src="/recursos/images/guidsgn-logo.png" alt="Logo"></div>
+            <div class="logo"><img src="./recursos/images/guidsgn-logo.png" alt="Logo"></div>
 
             <ul>
                 <li>
