Novas Aulas de Javascript Feitas - DOM

--- a/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_013/index.html
+++ b/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_013/index.html
@@ -9,8 +9,26 @@
 </head>
 <body>
 
-    <h1>DOM</h1>
+    <div id="title-area">
+        <h1>DOM</h1>
+    </div>
+
+    <div class="containerDom">
+        <div id="content-area">
+            <input type="password" placeholder="Sua senha ultra secreta...">
+        </div>
     
-    <script src="script.js"></script>
+        <div id="text-area">
+            <p>
+                DOM = Document Object Model
+            </p>
+        </div>
+    </div>
+
+    <button id="btn-tocar-dom">
+        Trocar Fundo!
+    </button>
+    
+    <script src="./script.js"></script>
 </body>
 </html>
