--- a/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_SimpleTaskList/index.html
+++ b/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_SimpleTaskList/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="../favicon.ico">
-    <title>Aula 010 Javascript</title>
+    <title>Aula 013 Javascript</title>
 </head>
 <body>
 
-    <h1>Objetos</h1>
+    <section id="tasks-area">
+
+        <h1>Lista de Tarefas Simples</h1>
+
+        <ul>
+            <li>Item 001</li>
+            <li>Item 002</li>
+        </ul>
+
+        <input type="text" placeholder="Coloque uma tarefa...">
+
+    </section>
     
     <script src="./script.js"></script>
 </body>
