--- a/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_006/index.html
+++ b/Learning_Programming/B7Web-Projetinhos/javascript/projetos/aulaJS_006/index.html
@@ -11,6 +11,6 @@
 
     <h1>Condicional Ternário</h1>
     
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
